cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( test1 test1.cpp )
target_link_libraries( test1 ${OpenCV_LIBS} )
add_executable( test2 test2.cpp )
target_link_libraries( test2 ${OpenCV_LIBS} )
add_executable( test3 test3.cpp )
target_link_libraries( test3 ${OpenCV_LIBS} )
